# thepupperclub.ca

./: .gitignore  README.md  package-lock.json  package.json  pupper_club_portal_spec.md  setup.sh
.github/workflows/: backup.yml  deploy.yml
api/: .env.example  .gitignore  composer.json  web.config
api/bootstrap/: app.php
api/config/: auth.php  cors.php  database.php  mail.php  services.php
api/public/: migrate.php  web.config
api/routes/: api.php  console.php
community/: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
community/src/: App.tsx  index.css  main.tsx
community/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
community/src-tauri/capabilities/: default.json
community/src-tauri/src/: lib.rs  main.rs
docs/specs/: community-spec.md
mobile/: app.json  package.json  tailwind.config.js  tsconfig.json
mobile/app/: _layout.tsx
mobile/contexts/: AuthContext.tsx
mobile/lib/: api.ts
shared/: package.json
shared/types/: api.ts  appointment.ts  audit.ts  billing.ts  documents.ts  dog.ts  index.ts  messaging.ts  user.ts  visit.ts
site/: .htaccess  CNAME  about.html  community.html  contact.html  faq.html  index.html  nav.js  pages.css  privacy.html  services.html  terms.html
site/community/: early-access.html  index.html  verification-complete.html  web.config
web/: .env.example  .gitignore  app.html  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web/public/: about.html  app.html  (+12 more)
(+268 files in other folders)
